fix(modal): prevent background bug on Safari

--- a/addon/styles/_pix-modal.scss
+++ b/addon/styles/_pix-modal.scss
@@ -40,14 +40,15 @@ $button-margin: 16px;
   vertical-align: middle; // Centered vertically with the .pix-modal__overlay::after which is 100% height
   width: 512px;
   max-width: calc(100% - #{2 * $spacing-xs}); // Horizontal margin sets here to have extra space for the .pix-modal__overlay::after on mobile
-  text-align: initial;
+  text-align: initial; 
+  background-color: $pix-neutral-10;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
 
   &__header {
     background: $pix-neutral-0;
     border-bottom: 1px solid $pix-neutral-20;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
     padding: $modal-padding;
     display: flex;
     align-items: flex-start;
@@ -79,7 +80,6 @@ $button-margin: 16px;
   }
 
   &__content {
-    background-color: $pix-neutral-10;
     padding: $modal-padding;
     font-size: 0.875rem;
     color: $pix-neutral-90;
@@ -93,10 +93,7 @@ $button-margin: 16px;
   }
 
   &__footer {
-    background-color: $pix-neutral-10;
     padding: 0 $modal-padding $modal-padding - $button-margin;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
 
     @include device-is('tablet') {
       display: flex;
